2004-02-26  Sebastian Wilhelmi  <seppi@seppi.de>

	* configure.in, config.h.win32.in, glib/gthread.c: Removed the PID
	niceness surrogate for thread priorities as requested by Tim. It
	does more harm than good.

	* glib/gatomic.c, glib/gatomic.h: New files to implement atomic
	operations for different platforms. Fixes bug #63621.

	* glib/glib.h: Include gatomic.h.

	* configure.in: Add test for assembler routines for atomic operations.

	* glib/Makefile.am: Add gatomic.c, gatomic.h.

	* tests/Makefile.am, tests/atomic-test.c: Unit test for atomic
	operations.

2003-02-26  Hans Breuer  <hans@breuer.org>

	* glib/glib.def : added g_hash_table_find and a
	bunch of g_queue_*

	* glib/gmain.c : make it compile on win32, 
	child_wake_up_pipe replaced by semaphore like it is done
	for the other wake_up_pipe

	* config.h.win32.in : added HAVE_INT64_AND_I64
	* glibconfig.h.win32.in : G_MAXSIZE .. G_M??INT64,
	and typedef for GPid

	* test/env-test.c : don't let the local log function
	collide in namespace with standard C

2004-02-25  Sebastian Wilhelmi  <seppi@seppi.de>

	* configure.in, glib/gthread.c: For the PID thread priorities
	surrogate use gettid instead of getpid. This also works with nptl
	(on linux-2.6), as well as with linuxthreads (on linux-2.4).

2004-02-24  Sebastian Wilhelmi  <seppi@seppi.de>

	* glib/grand.c: Add Since: 2.4, where due

Tue Feb 24 14:09:21 2004  Owen Taylor  <otaylor@redhat.com>

	* === Released 2.3.3 ===

	* configure.in: Version 2.3.3, interface age 0.

Mon Feb 23 22:24:00 2004  Matthias Clasen  <maclas@gmx.de>

	* NEWS: Start of 2.3.3 section.

Sun Feb 22 02:32:14 2004  Matthias Clasen  <maclas@gmx.de>

	* configure.in: Set the gmodule suffix to 'a' for aix and 
	use the aix gmodule implementation.  (#85930, Laurent Vivier)

Sun Feb 22 00:47:04 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gnode.c (g_node_copy_deep): New function to deep-copy a 
	GNode and its children.  (#93464, James M. Cape)
